2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: change the function "update_agent_module"
	for to add the update only that not delete pending.
	* godmode/agentes/massive_edit_modules.php: fix form to set disabled and
	history data as select box instead checkbox that this had bug because
	it was disabled didn't set false or true in db.
	Fixes: 2860987

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/map_builder.php: add parameter to ajax
	for filter the modules disabled.
	Fixes: 2857374

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/map_builder.php: fix small bug when
	there are'nt any elements in the map and it try loop foearch.

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/include/functions_events.php: fix the insert event,
	before Pandora console inserted timestamp as string timestamp, now Pandora
	console insert the event with clean and numeric unix timestamp.
	* pandora_console/include/functions_alerts.php: cleanup the sourcecode.
	Fixes: 2854087

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_agente.php, godmode/alerts/alert_list.php: fix
	bug when there aren't not defined or attach action in template alert. Before
	it was showing the loading ajax gif, now it show the select box with none.

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions_agents.php: cleanup
	sourcecode, and important optimize, because the old querys was very huge
	when the query have consult with all agent ids. That affect when login
	as admin into Pandora Console in systems with few resources (more or
	less 1Gb RAM in a desktop computer).
	* include/functions_db.php: add function "isAllGroups" that test if the
	array pass as parameter is all groups in DB, and return true o false. And
	cleanup source code.
	Fixes: 2824327
